--- a/sass/index.css
+++ b/sass/index.css
@@ -1,14 +1,19 @@
 /* line 1, C:/Users/Zephyr/Documents/Brackets/web2/flexbox/sass/index.sass */
 body {
-  background: #555; }
+  background: #555;
+  margin: 0;
+  padding: 0; }
 
-/* line 5, C:/Users/Zephyr/Documents/Brackets/web2/flexbox/sass/index.sass */
+/* line 7, C:/Users/Zephyr/Documents/Brackets/web2/flexbox/sass/index.sass */
 .container header {
   background: orange;
   height: 100px;
-  padding: 20px; }
+  padding: 20px;
+  position: fixed;
+  width: 100%;
+  top: 0px; }
 
-/* line 10, C:/Users/Zephyr/Documents/Brackets/web2/flexbox/sass/index.sass */
+/* line 15, C:/Users/Zephyr/Documents/Brackets/web2/flexbox/sass/index.sass */
 .container main {
   display: flex;
   flex-direction: row;
@@ -16,22 +21,26 @@ body {
   justify-content: center;
   align-content: stretch;
   align-items: stretch;
-  background: pink; }
-  /* line 19, C:/Users/Zephyr/Documents/Brackets/web2/flexbox/sass/index.sass */
+  background: pink;
+  padding-top: 140px;
+  padding-bottom: 100px; }
+  /* line 26, C:/Users/Zephyr/Documents/Brackets/web2/flexbox/sass/index.sass */
   .container main .sidebar1 {
-    with: 15%; }
-  /* line 21, C:/Users/Zephyr/Documents/Brackets/web2/flexbox/sass/index.sass */
+    width: 15%; }
+  /* line 28, C:/Users/Zephyr/Documents/Brackets/web2/flexbox/sass/index.sass */
   .container main .text {
-    with: 60%; }
-  /* line 23, C:/Users/Zephyr/Documents/Brackets/web2/flexbox/sass/index.sass */
+    width: 60%; }
+  /* line 30, C:/Users/Zephyr/Documents/Brackets/web2/flexbox/sass/index.sass */
   .container main .sidebar2 {
-    with: 15%;
-    background: black; }
+    width: 15%; }
 
-/* line 26, C:/Users/Zephyr/Documents/Brackets/web2/flexbox/sass/index.sass */
+/* line 32, C:/Users/Zephyr/Documents/Brackets/web2/flexbox/sass/index.sass */
 .container footer {
   background: orange;
   height: 50px;
-  padding: 20px; }
+  padding: 20px;
+  position: fixed;
+  bottom: 0px;
+  width: 100%; }
 
 /*# sourceMappingURL=index.css.map */
