--- a/sass/index.sass
+++ b/sass/index.sass
@@ -1,11 +1,16 @@
 body
     background: #555
+    margin: 0
+    padding: 0
 
 .container
     header
         background: orange
         height: 100px
         padding: 20px
+        position: fixed
+        width: 100%
+        top: 0px
 
     main
         display: flex
@@ -15,15 +20,19 @@ body
         align-content: stretch
         align-items: stretch
         background: pink
+        padding-top: 140px
+        padding-bottom: 100px
 
         .sidebar1
-            with: 15%
+            width: 15%
         .text
-            with: 60%
+            width: 60%
         .sidebar2
-            with: 15%
-            background: black
+            width: 15%
     footer
         background: orange
         height: 50px
         padding: 20px
+        position: fixed
+        bottom: 0px
+        width: 100%
